Fix field input on firefox.

--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -27,17 +27,6 @@
 #simplemodal-container a.modalCloseImg {background:url(../img/basic/x.png) no-repeat; width:25px; height:29px; display:inline; z-index:3200; position:absolute; top:-15px; right:-16px; cursor:pointer;}
 #simplemodal-container h3 {color:#84b8d9;}
 
-#simplemodal-container input[type=text]  {
-    height:30px;
-    width:150px;
-    padding:10px;
-}
-
-#simplemodal-container .button {
-    
-}
-
-
 #simplemodal-container .error {
     height: 20px;
     display:block;
